Fix card size change overlap issue

--- a/assets/css/SongCard.scss
+++ b/assets/css/SongCard.scss
@@ -31,6 +31,7 @@
 .song-card {
   margin-left: 23px;
   margin-right: 23px;
+  width: 300px;
   display: inline-block;
 }
 
